@@ -1,1 +1,3 @@
 "# ToDoList" 
+Need the following VM arguments: --module-path "C:\IDE\java_libraries\javafx-sdk-19\lib" --add-modules javafx.controls,javafx.fxml
+Also the JavaFx 19 library is needed
